--- a/templates/index.html
+++ b/templates/index.html
@@ -21,15 +21,34 @@
     let calendarEl = document.getElementById("calendar");
 
     let calendar = new FullCalendar.Calendar(calendarEl, {
-      events : [
+      events: [
         {% for event in events %}
           {
-          title : "{{ event.todo }}",
+          id: "{{ event.id }}",
+          title : "{{ event.title | safe }}",
           start : "{{ event.date }}",
+          backgroundColor : "{{ event.backgroundColor }}"
           },
+        
+        {% if event.stages %}
+          {% for stage in event.stages %}
+          {
+            id: "{{ stage.id }}",
+            title : "{{ stage.title | safe }}",
+            start : "{{ stage.date }}",
+          }, 
+          {% endfor %}
+          
+        {% endif %}
+
         {% endfor %}
         ]
+
+     
+
       });
+
+    
 
     calendar.render();
   </script>
