--- a/templates/index.html
+++ b/templates/index.html
@@ -1,56 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+{% extends "template.html" %}
 
-    <link rel="stylesheet" href="static/styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.4.0/main.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.4.0/main.min.js"></script>
-    <title>Cycling calendar</title>
-  </head>
-<body>
+{% block title %}
+    main
+{% endblock %}
 
-<header>
-  <h1>Cycling Calendar</h1>
-</header>
+{% block main %}
 <div id="calendar"></div>
 
-
   <script>
-    let calendarEl = document.getElementById("calendar");
 
-    let calendar = new FullCalendar.Calendar(calendarEl, {
-      events: [
-        {% for event in events %}
-          {
-          id: "{{ event.id }}",
-          title : "{{ event.title | safe }}",
-          start : "{{ event.date }}",
-          backgroundColor : "{{ event.backgroundColor }}"
-          },
-        
-        {% if event.stages %}
-          {% for stage in event.stages %}
-          {
-            id: "{{ stage.id }}",
-            title : "{{ stage.title | safe }}",
-            start : "{{ stage.date }}",
-          }, 
-          {% endfor %}
+      let calendarEl = document.getElementById("calendar");
+
+      let calendar = new FullCalendar.Calendar(calendarEl, {
+        events: [
+          {% for event in events %}
+            {
+            id: "{{ event.id }}",
+            title : "{{ event.title | safe }}",
+            start : "{{ event.date }}",
+            backgroundColor : "{{ event.backgroundColor }}"
+            },
           
-        {% endif %}
+          {% if event.stages %}
+            {% for stage in event.stages %}
+            {
+              id: "{{ stage.id }}",
+              title : "{{ stage.title | safe }}",
+              start : "{{ stage.date }}",
+            }, 
+            {% endfor %}
+            
+          {% endif %}
 
-        {% endfor %}
-        ]
+          {% endfor %}
+          ]
+        });
+      
 
-     
-
-      });
-
-    
-
-    calendar.render();
+      calendar.render();
   </script>
-</body>
-</html>
+
+{% endblock %}
