--- a/templates/template.html
+++ b/templates/template.html
@@ -8,6 +8,7 @@
       <link rel="stylesheet" href="static/styles.css">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.4.0/main.min.css">
       <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.4.0/main.min.js"></script>
+      <script defer src="static/js/script.js"></script>
       <title>Cycling calendar: {% block title %}{% endblock %}</title>
     </head>
   <body>
