--- a/templates/template.html
+++ b/templates/template.html
@@ -14,7 +14,10 @@
   <body>
 
     <header>
-      <h1>Cycling Calendar</h1>
+      <div class="header-container">
+        <h1>Cycling Calendar</h1>
+        <img id="header-image" src="/static/Images/header.png" alt="cycling-header">
+      </div>
     </header>
 
     <main>
