--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
   <div class="calendar-container">
     <div id="calendar"></div>
   </div>
-
+  
   <div class="modal" id="modal">
     <div class="modal-header">
       <div class="title">Race Info</div>
@@ -21,6 +21,7 @@
         <p id="race-departure-city"></p>
         <p id="race-arrival-city"></p>
         <p id="race-classification"></p>
+          
         
     </div>
   </div>
@@ -40,26 +41,25 @@
 
         events: [
           {% for event in events %}
-            {
-            id: "{{ event.id }}",
-            title : "{{ event.title | safe }}",
-            start : "{{ event.date }}",
-            backgroundColor : "{{ event.backgroundColor }}"
-            },
-          
-          {% if event.stages %}
-            {% for stage in event.stages %}
-            {
-              id: "{{ stage.id }}",
-              title : "{{ stage.title | safe }}",
-              start : "{{ stage.date }}",
-            }, 
-            {% endfor %}
-            
-          {% endif %}
-
+            {% if event.stages %}
+              {% for stage in event.stages %}
+                {
+                id: "{{ stage.id }}",
+                title : "{{ stage.title | safe }}",
+                start : "{{ stage.date }}",
+                color : "{{ stage.backgroundColor }}"
+                }, 
+              {% endfor %}
+              {% else %}
+                {
+                id: "{{ event.id }}",
+                title : "{{ event.title | safe }}",
+                start : "{{ event.date }}",
+                color : "{{ event.backgroundColor }}"
+                },
+            {% endif %}
           {% endfor %}
-          ],
+        ],
 
       eventClick: function(info) {
           var eventId = info.event.id;
