--- a/templates/template.html
+++ b/templates/template.html
@@ -4,8 +4,8 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-      <link rel="stylesheet" href="static/styles.css">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.4.0/main.min.css">
+      <link rel="stylesheet" href="static/styles.css">
       <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.4.0/main.min.js"></script>
       <script defer src="static/js/script.js"></script>
       <title>Cycling calendar: {% block title %}{% endblock %}</title>
@@ -17,11 +17,10 @@
         <h1>Cycling Calendar</h1>
         <!-- <a href="/authorize">google</a> -->
 
-        <img id="header-image" src="/static/Images/header.png" alt="cycling-header">
+        <img id="header-image" src="/static/Images/header2.png" alt="cycling-header">
 
       </div>
     </header>
-
     <main>
       {% block main %}{% endblock %}
     </main>
@@ -34,6 +33,8 @@
       </button>
     </a>
   </footer>
+
+
 
 
   </body>
